feat: 메타데이터 기입하기

--- a/etc/래빗톡_삼자대면.md
+++ b/etc/래빗톡_삼자대면.md
@@ -1,3 +1,10 @@
+---
+title: 삼자대면
+date: 2024-02-15
+tags: [이동욱, 이미림, 이진형, 래빗톡, 래빗톡, 삼자대면, 시스템화, Sonarqube, ESlint, Prettier, TC, 비판적 사고, 당근마켓, 키워드 알림]
+alias: [삼자대면]
+---
+
 # 삼자대면
 
 ## 이동욱 CTO님
