--- a/etc/맥비기획-컨퍼런스-2025.md
+++ b/etc/맥비기획-컨퍼런스-2025.md
@@ -74,6 +74,33 @@
 
 #### AI 시대, 기획자의 생존 전략: ‘컴퓨팅 사고력’ - 태규
 
+- AI 흐름
+  - LLM, AI Agent, AI-DLC
+    - 명세(Spec) 기반 개발
+    - [spec-kit](https://github.com/github/spec-kit)
+  - => 또 터미널 등장..
+- 명세 관리도구 소개
+  - [Open Spec](https://github.com/Fission-AI/OpenSpec)
+    - 변경 관리에 최적화되어있음. 유지보수성 좀 더 좋음.
+      - => 근데 이건 다 개발얘기지 기획 얘기가 아니잖아
+      - => 보다 상위 수준의 정책 결정에 대한 언급이 전혀 없어서 아쉽네
+    - 아카이브 & 스펙 갱신 기능
+      - => 이건 좋은듯. 기존 스펙에 현재 상세 구현을 하나씩 통합하거나 변경해나갈 수 있는 기능
+  - 비 개발자의 바이브코딩 사례
+    - => 자신의 장점을 살려서 뭔가를 바로 만들어 낼 수 있다는 점은 매우 고무적이긴 함.
+    - => 근데 이런 프로젝트는 대부분 단발성.. 유지보수나 개선이 필요한 경우 큰 문제가 생김
+      - => 실제로 코드 훼손, 데이터 유실 등의 문제가 발생함.
+- AI 활용 사례
+- 기획자 생존 전략: 컴퓨팅 사고력
+  - 문제 분해: 기능을 행동 단계로 쪼개기
+    - 입력 -> 처리 -> 조건 -> 출력
+    - AI 자동화 설계의 기본
+  - 알고리즘적 사고: If-Then
+    - 조건/분기/반복 패턴에 익숙해지기
+  - 데이터 사고: 모든 기능을 데이터 흐름으로 이해하기
+    - 데이터 -> 생성 -> 전달 -> 저장 -> 활용
+    - AI Agent의 기본 단위(?)
+
 ### 관리 스킬
 
 ### 업무 스킬
